force-app/main/default/objects/Termination__c/Termination__c.object-meta.xml
<CustomObject>
    <label>Termination Information</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Termination Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Termination Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>