force-app/main/default/objects/Termination__c/fields/Customer_Paid_Sent_to_Collections__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paid_Sent_to_Collections__c</fullName>
    <label>Customer Paid/Sent to Collections</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>