force-app/main/default/objects/Termination__c/fields/End_of_Term__c.field-meta.xml
<CustomField>
    <fullName>End_of_Term__c</fullName>
    <label>End of Term?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>