force-app/main/default/objects/Termination__c/fields/Eval_Conversion_New_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Eval_Conversion_New_Renewal__c</fullName>
    <label>Eval Conversion, New, Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eval Conversion Contract</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Renewal Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>