force-app/main/default/objects/Termination__c/fields/Interview_Details__c.field-meta.xml
<CustomField>
    <fullName>Interview_Details__c</fullName>
    <label>Interview Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>