force-app/main/default/objects/Termination__c/fields/Interview_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Interview_Termination_Reason__c</fullName>
    <label>Interview Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Business Difficulties</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>FMCSA Ruling</fullName>
            </value>
            <value>
                <fullName>Going to Competitor</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Not Using Units</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Phones</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>