force-app/main/default/objects/Termination__c/fields/of_Months_Since_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>of_Months_Since_Contract_Date__c</fullName>
    <label># of Months Since Contract Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-12 Months</fullName>
            </value>
            <value>
                <fullName>12-36 Months</fullName>
            </value>
            <value>
                <fullName>More than 36 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>