force-app/main/default/objects/Termination__c/fields/Termination_Comments__c.field-meta.xml
<CustomField>
    <fullName>Termination_Comments__c</fullName>
    <label>Termination Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>