force-app/main/default/objects/Termination__c/fields/Termination_Fees__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fees__c</fullName>
    <label>Termination Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>