force-app/main/default/objects/Termination__c/fields/Termination_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Termination_Letter_Sent__c</fullName>
    <label>Termination Letter Sent</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>