force-app/main/default/objects/Termination__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <formula>TEXT(Account__r.Closed_Reason__c)</formula>
    <label>Termination Reason</label>
    <type>Text</type>
</CustomField>